<resources>
    <string name="app_name">Food Hup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_to">Deliver to</string>
    <string name="search_food">Search Food</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_name">Full name</string>
    <string name="sign_up2">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail2">E-mail</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="enter_your_phone_number_to_verify_nyour_account">Enter your phone number to verify\nyour account</string>
    <string name="registration">Registration</string>
    <string name="send">Send</string>
    <string name="phone">phone</string>
    <string name="user_name">User name</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
</resources>